--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -108,7 +108,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MACCHINARIO}}                                                                                                                                                                                    \\
-		I macchinari sono identificati tramite un ID univoco. Ad ogni macchinario viene fatta una manutenzione periodica, è quindi utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome rappresentatativo e la data di acquisto. \\
+		I macchinari sono identificati tramite un ID univoco. Ad ogni macchinario viene fatta una manutenzione periodica, è quindi utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome rappresentatativo e la data di acquisto.
 		Le manutenzioni hanno un costo e vengono eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne.                                                                                                                                     \\
 		\bottomrule
 	\end{tabular}
