--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -8,4 +8,4 @@ E' consuetudine, per la cantina \emph{WineBase}, organizzare degli eventi all'in
 Riguardo al reparto produttivo sono presenti tutte le fasi di lavorazione dell'uva per la produzione del vino. Queste \textbf{linee produttive} sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste sono presenti altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del vino in esse contenuto (rosso, bianco, rosato e spumante). Nel magazzino viene tenuta traccia della quantità delle bottiglie conservate. Tutti questi reparti sono identificati tramite un identificativo univoco.\\
 In ognugno di questi reparti lavorano dei \textbf{dipendeti}. Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente (esclusi alcuni supervisori) ha un supervisore a cui fare riferimento e ogni linea produttiva e' diretta da un supervisore. Per ogni dipendente e' necessario tenere traccia dei turni di lavoro effettuati e della linea produttiva in cui i vari turni sono svolti.\\
 Per ogni linea produttiva sono presenti dei \textbf{macchinari} che aiutano i dipendenti nelle mansioni quotidiane. I macchinari sono identificati tramite un ID univoco. Ad ogni macchinario viene fatta una manutenzione periodica, è quindi utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome rappresentatativo e la data di acquisto.\\
-Le manutenzioni hanno un costo e vengono eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende rappresentate come sopra.
+Le manutenzioni hanno un costo e vengono eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende, rappresentate come sopra.
