--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -8,13 +8,13 @@
 		\midrule
 		Bottiglia di vino & & Una bottiglia di vino della cantina in vendita online e nei negozi fisici. & Vino, Bottiglia, Tappo, Ordine, Magazzino\\
 		\midrule
-		Vino & Tipo Vino & Le tipologie di vino prodotte all'interno della cantina. & Uva, Evento, Bottiglia di vino \\
+		Vino & Tipo Vino & Una tipologia di vino prodotta all'interno della cantina. & Uva, Evento, Bottiglia di vino \\
 		
 		\midrule
-		Materia prima & & Rappresenta le materie prime che vengono acquistate e manipolate per comporre le bottiglie di vino. &  Vino, Tipo Uva, Fornitore, Bottiglia di vino\\
+		Materia prima & & Una materia prima che viene acquistata e manipolata per comporre le bottiglie di vino. &  Vino, Tipo Uva, Fornitore, Bottiglia di vino\\
 		
 		\midrule
-		Uva & Tipo Uva & La tipologia dell'uva che viene acquistata per produrre il vino. &  Vigneto, Vino\\
+		Uva & Tipo Uva & Una tipologia di uva che viene acquistata per produrre il vino. &  Vigneto, Vino\\
 		
 		\midrule
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
@@ -29,7 +29,7 @@
 		Ordine & & Un ordine effettuato da un acquirente, contiene le informazioni della merce acquistata e della spedizione. &  Bottiglia di vino, Corriere, Acquirente\\
 		
 		\midrule
-		Corriere & & Il corriere che si occupa della spedizione di un ordine & Ordine\\
+		Corriere & & Un corriere che si occupa della spedizione di un ordine & Ordine\\
 		\midrule
 		
 		Evento & & Un evento organizzato all'interno di un negozio interno in onore di uno o piu' vini prodotti dalla cantina. &  Tipo Vino, Negozio Interno\\
