--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -1,7 +1,7 @@
 Lo schema concenttuale presenta numerose generalizzazioni. Si procede quindi all'analisi di queste ultime per permettere la traduzione verso lo schema logico.
 \begin{flushleft}
 	\textbf{\large{MateriaPrima}}\\
-	L'entità \emph{MateriaPrima} è una generalizzazione completa delle entità \emph{Uva, Bottiglia, Tappo}. Queste ultime presentano un carico di attributi e di relazioni maggiore rispetto a \emph{MateriaPrima}. Si è deciso di eliminare la generalizzazione e di creare una relazione specifica per \emph{Uva, Bottiglia, Tappo} con l'entità \emph{Fornitore}.
+	L'entità \emph{MateriaPrima} è una generalizzazione completa delle entità \emph{Uva, Bottiglia, Tappo}. Queste ultime presentano un carico di attributi e di relazioni maggiore rispetto a \emph{MateriaPrima}. Si è deciso di eliminare la generalizzazione e di creare una relazione specifica per ogniuno tra \emph{Uva, Bottiglia, Tappo} con l'entità \emph{Fornitore}.
 \end{flushleft}
 
 \begin{flushleft}
