--- a/src/progettazioneLogica/operazioni_tipiche.tex
+++ b/src/progettazioneLogica/operazioni_tipiche.tex
@@ -7,9 +7,9 @@
 		\midrule
 		Acquisto materie prime & $\backsim$ 100 volte all'anno\\
 		\midrule
-		Manutenzione macchinari & 200 volte all'anno\\
+		Manutenzione macchinario & 200 volte all'anno\\
 		\midrule
-		Organizzazione eventi & 5 volte all'anno\\
+		Organizzazione evento & 5 volte all'anno\\
 		\midrule
 		Assunzione dipendente & 10 volte all'anno\\
 		\midrule
