--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
-	\item \textbf{Stampa resoconto settimanale fatturato.}\\
+	\item \textbf{Stampa resoconto guadagno.}\\
 	      \begin{tabularx}{\textwidth}{|X|X|}
 			  \hline
 			  \vspace{.01mm}
