--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -49,7 +49,8 @@
 			   \raisebox{-\totalheight}{\includegraphics[width=0.47\textwidth , keepaspectratio]{src/queryIndici/assets/Query2.png}}
 		      \\
 		      \hline
-	      \end{tabularx}
+		  \end{tabularx}
+		  \vspace{1cm}
 	\item \textbf{Lista dei vini prodotti con la relativa tipologia di uva utilizzata e il fornitore di quest'ultima.}\\
 	      \begin{tabularx}{\textwidth}{|X|X|}
 		      \hline
